<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addActivity">

    <EditText
        android:id="@+id/edit_E"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:layout_marginTop="64dp"
        android:autofillHints="number"
        android:gravity="center"
        android:hint="@string/lab1"
        android:inputType="numberDecimal"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <EditText
        android:id="@+id/edit_C"
        android:layout_width="384dp"
        android:layout_height="412dp"
        android:autofillHints="number"
        android:gravity="center"
        android:hint="@string/lab2"
        android:inputType="numberDecimal"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_E"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:onClick="addWord"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_C"
        app:layout_constraintVertical_bias="0.441" />

    <Button
        android:id="@+id/Button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        android:onClick="okToRun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_E"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

</androidx.constraintlayout.widget.ConstraintLayout>